# toolbox

./: .cliffignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  flake.nix  shell.nix
src/: config.rs  lib.rs  sasl.rs  secret.rs  tls.rs
src/secret/: de.rs  mod.rs  secret.rs  ser.rs
src/stream/: de.rs  http.rs  imap.rs  jmap.rs  mod.rs  smtp.rs  stream.rs
src/terminal/: cli.rs  config.rs  error.rs  log.rs  mod.rs  printer.rs  prompt.rs
src/terminal/clap/: args.rs  mod.rs  parsers.rs
src/terminal/clap/commands/: completion.rs  manual.rs  mod.rs
